--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@types/react-dom": "^18.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
     "prisma": "^5.21.1",
     "typescript": "^5.6.3"
   }
