--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@mui/material": "^6.1.7",
     "@mui/material-nextjs": "^6.1.7",
     "@prisma/client": "^5.22.0",
+    "mui-color-input": "^5.0.1",
     "next": "14.2.17",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
